contact list update
contact list update

--- a/pastores-pe/contatos-empresas-hidraulica.html
+++ b/pastores-pe/contatos-empresas-hidraulica.html
@@ -33,20 +33,26 @@
             <div class="col-xs-12">
                     <div class="text-center">
                         <div style="padding-bottom: 30px;">
-                            <button onclick="location.href='https://wa.me/5587999374065?text=Olá,%20gostaria%20de%20um%20orçamento!'" type="button" class="btn btn-outline-light" style="width: 80%; padding-top:10px; padding-bottom:10px; font-weight: 600;">Monte Sinai Projetos (Garanhuns)</button>
+                            <button onclick="location.href='https://wa.me/5581983915479?text=Olá,%20gostaria%20de%20um%20orçamento!'" type="button" class="btn btn-outline-light" style="width: 80%; padding-top:10px; padding-bottom:10px; font-weight: 600;">JB Construção</button>
                         </div>
                         <div style="padding-bottom: 30px;">
-                            <button onclick="location.href='https://wa.me/558186962979?text=Olá,%20gostaria%20de%20um%20orçamento!'" type="button" class="btn btn-outline-light" style="width: 80%; padding-top:10px; padding-bottom:10px; font-weight: 600;">José Lúcio</button>
+                            <button onclick="location.href='https://wa.me/558199423738?text=Olá,%20gostaria%20de%20um%20orçamento!'" type="button" class="btn btn-outline-light" style="width: 80%; padding-top:10px; padding-bottom:10px; font-weight: 600;">AH Serviços</button>
                         </div>
                         <div style="padding-bottom: 30px;">
-                            <button onclick="location.href='https://wa.me/558198490590?text=Olá,%20gostaria%20de%20um%20orçamento!'" type="button" class="btn btn-outline-light" style="width: 80%; padding-top:10px; padding-bottom:10px; font-weight: 600;">NJR Marcenaria</button>
+                            <button onclick="location.href='tel:+558130762306'" type="button" class="btn btn-outline-light" style="width: 80%; padding-top:10px; padding-bottom:10px; font-weight: 600;">Projeforma Serviços</button>
                         </div>
                         <div style="padding-bottom: 30px;">
-                            <button onclick="location.href='https://wa.me/558191179458?text=Olá,%20gostaria%20de%20um%20orçamento!'" type="button" class="btn btn-outline-light" style="width: 80%; padding-top:10px; padding-bottom:10px; font-weight: 600;">Dedé Móveis</button>
+                            <button onclick="location.href='https://wa.me/5581992012106?text=Olá,%20gostaria%20de%20um%20orçamento!'" type="button" class="btn btn-outline-light" style="width: 80%; padding-top:10px; padding-bottom:10px; font-weight: 600;">BCN Engenharia</button>
                         </div>
                         <div style="padding-bottom: 30px;">
-                            <button onclick="location.href='https://wa.me/5581994361385?text=Olá,%20gostaria%20de%20um%20orçamento!'" type="button" class="btn btn-outline-light" style="width: 80%; padding-top:10px; padding-bottom:10px; font-weight: 600;">Luan Móveis (Caruaru)</button>
+                            <button onclick="location.href='tel:+558737622648'" type="button" class="btn btn-outline-light" style="width: 80%; padding-top:10px; padding-bottom:10px; font-weight: 600;">Técnica Tubos (Caruaru)</button>
                         </div>
+                        <div style="padding-bottom: 30px;">
+                            <button onclick="location.href='https://wa.me/5581986343916?text=Olá,%20gostaria%20de%20um%20orçamento!'" type="button" class="btn btn-outline-light" style="width: 80%; padding-top:10px; padding-bottom:10px; font-weight: 600;">Odilon das Bombas</button>
+                        </div>
+
+
+                        
                     </div>
             </div>
             </div>
