--- a/pastores-pe/contatos-empresas-pelicula.html
+++ b/pastores-pe/contatos-empresas-pelicula.html
@@ -36,6 +36,30 @@
                         <div style="padding-bottom: 30px;">
                             <button onclick="location.href='https://wa.me/558185681469?text=Olá,%20gostaria%20de%20um%20orçamento!'" type="button" class="btn btn-outline-light" style="width: 80%; padding-top:10px; padding-bottom:10px; font-weight: 600;">Arts Mundo</button>
                         </div>
+                        <div style="padding-bottom: 30px;">
+                            <button onclick="location.href='https://wa.me/5581988449210?text=Olá,%20gostaria%20de%20um%20orçamento!'" type="button" class="btn btn-outline-light" style="width: 80%; padding-top:10px; padding-bottom:10px; font-weight: 600;">A.Luminosos</button>
+                        </div>
+                        <div style="padding-bottom: 30px;">
+                            <button onclick="location.href='tel:+558133272687'" type="button" class="btn btn-outline-light" style="width: 80%; padding-top:10px; padding-bottom:10px; font-weight: 600;">A&C Sinalização</button>
+                        </div>
+                        <div style="padding-bottom: 30px;">
+                            <button onclick="location.href='https://wa.me/5581996923338?text=Olá,%20gostaria%20de%20um%20orçamento!'" type="button" class="btn btn-outline-light" style="width: 80%; padding-top:10px; padding-bottom:10px; font-weight: 600;">Fidelis Comunicação Visual</button>
+                        </div>
+                        <div style="padding-bottom: 30px;">
+                            <button onclick="location.href='https://wa.me/5581985334680?text=Olá,%20gostaria%20de%20um%20orçamento!'" type="button" class="btn btn-outline-light" style="width: 80%; padding-top:10px; padding-bottom:10px; font-weight: 600;">Jefferson Sign</button>
+                        </div>
+                        <div style="padding-bottom: 30px;">
+                            <button onclick="location.href='tel:+558121610017'" type="button" class="btn btn-outline-light" style="width: 80%; padding-top:10px; padding-bottom:10px; font-weight: 600;">A&C Sinalização</button>
+                        </div>
+                        <div style="padding-bottom: 30px;">
+                            <button onclick="location.href='https://wa.me/5581992524220?text=Olá,%20gostaria%20de%20um%20orçamento!'" type="button" class="btn btn-outline-light" style="width: 80%; padding-top:10px; padding-bottom:10px; font-weight: 600;">Mídia Indoor (Caruaru)</button>
+                        </div>
+                        <div style="padding-bottom: 30px;">
+                            <button onclick="location.href='https://wa.me/5581996841807?text=Olá,%20gostaria%20de%20um%20orçamento!'" type="button" class="btn btn-outline-light" style="width: 80%; padding-top:10px; padding-bottom:10px; font-weight: 600;">D2 Artys (Surubim)</button>
+                        </div>
+                        <div style="padding-bottom: 30px;">
+                            <button onclick="location.href='https://wa.me/5587988433456?text=Olá,%20gostaria%20de%20um%20orçamento!'" type="button" class="btn btn-outline-light" style="width: 80%; padding-top:10px; padding-bottom:10px; font-weight: 600;">RV Serviços (Petrolina)</button>
+                        </div>
                     </div>
             </div>
             </div>
