--- a/pastores-pe/contatos-empresas-pintura.html
+++ b/pastores-pe/contatos-empresas-pintura.html
@@ -36,13 +36,22 @@
                             <button onclick="location.href='https://wa.me/558189324325?text=Olá,%20gostaria%20de%20um%20orçamento!'" type="button" class="btn btn-outline-light" style="width: 80%; padding-top:10px; padding-bottom:10px; font-weight: 600;">JAS Construtora</button>
                         </div>
                         <div style="padding-bottom: 30px;">
+                            <button onclick="location.href='https://wa.me/558199423738?text=Olá,%20gostaria%20de%20um%20orçamento!'" type="button" class="btn btn-outline-light" style="width: 80%; padding-top:10px; padding-bottom:10px; font-weight: 600;">AH Serviços</button>
+                        </div>
+                        <div style="padding-bottom: 30px;">
                             <button onclick="location.href='https://wa.me/558198462794?text=Olá,%20gostaria%20de%20um%20orçamento!'" type="button" class="btn btn-outline-light" style="width: 80%; padding-top:10px; padding-bottom:10px; font-weight: 600;">MJ Pintura</button>
+                        </div>
+                        <div style="padding-bottom: 30px;">
+                            <button onclick="location.href='https://wa.me/5581992012106?text=Olá,%20gostaria%20de%20um%20orçamento!'" type="button" class="btn btn-outline-light" style="width: 80%; padding-top:10px; padding-bottom:10px; font-weight: 600;">BCN Engenharia</button>
                         </div>
                         <div style="padding-bottom: 30px;">
                             <button onclick="location.href='https://wa.me/558183078893?text=Olá,%20gostaria%20de%20um%20orçamento!'" type="button" class="btn btn-outline-light" style="width: 80%; padding-top:10px; padding-bottom:10px; font-weight: 600;">Vanderlei Pintura</button>
                         </div>
                         <div style="padding-bottom: 30px;">
                             <button onclick="location.href='https://wa.me/558188594044?text=Olá,%20gostaria%20de%20um%20orçamento!'" type="button" class="btn btn-outline-light" style="width: 80%; padding-top:10px; padding-bottom:10px; font-weight: 600;">Amós Unividros</button>
+                        </div>
+                        <div style="padding-bottom: 30px;">
+                            <button onclick="location.href='https://wa.me/558185681469?text=Olá,%20gostaria%20de%20um%20orçamento!'" type="button" class="btn btn-outline-light" style="width: 80%; padding-top:10px; padding-bottom:10px; font-weight: 600;">Arts Mundo</button>
                         </div>
                         <div style="padding-bottom: 30px;">
                             <button onclick="location.href='https://wa.me/5581994318600?text=Olá,%20gostaria%20de%20um%20orçamento!'" type="button" class="btn btn-outline-light" style="width: 80%; padding-top:10px; padding-bottom:10px; font-weight: 600;">Edilson Belarmino</button>
