--- a/pastores-pe/contatos-empresas-serralheria.html
+++ b/pastores-pe/contatos-empresas-serralheria.html
@@ -39,10 +39,16 @@
                             <button onclick="location.href='https://wa.me/5587999004385?text=Olá,%20gostaria%20de%20um%20orçamento!'" type="button" class="btn btn-outline-light" style="width: 80%; padding-top:10px; padding-bottom:10px; font-weight: 600;">Mr. Metal (Serra Talhada)</button>
                         </div>
                         <div style="padding-bottom: 30px;">
+                            <button onclick="location.href='https://wa.me/5581983915479?text=Olá,%20gostaria%20de%20um%20orçamento!'" type="button" class="btn btn-outline-light" style="width: 80%; padding-top:10px; padding-bottom:10px; font-weight: 600;">JB Construção</button>
+                        </div>
+                        <div style="padding-bottom: 30px;">
                             <button onclick="location.href='https://wa.me/5581983350704?text=Olá,%20gostaria%20de%20um%20orçamento!'" type="button" class="btn btn-outline-light" style="width: 80%; padding-top:10px; padding-bottom:10px; font-weight: 600;">Severino Lins</button>
                         </div>
                         <div style="padding-bottom: 30px;">
                             <button onclick="location.href='https://wa.me/5581987444425?text=Olá,%20gostaria%20de%20um%20orçamento!'" type="button" class="btn btn-outline-light" style="width: 80%; padding-top:10px; padding-bottom:10px; font-weight: 600;">Edilson Barbosa</button>
+                        </div>
+                        <div style="padding-bottom: 30px;">
+                            <button onclick="location.href='https://wa.me/558185681469?text=Olá,%20gostaria%20de%20um%20orçamento!'" type="button" class="btn btn-outline-light" style="width: 80%; padding-top:10px; padding-bottom:10px; font-weight: 600;">Arts Mundo</button>
                         </div>
                         <div style="padding-bottom: 30px;">
                             <button onclick="location.href='https://wa.me/5581991817490?text=Olá,%20gostaria%20de%20um%20orçamento!'" type="button" class="btn btn-outline-light" style="width: 80%; padding-top:10px; padding-bottom:10px; font-weight: 600;">AJE Serralheria (Caruaru)</button>
