padrões gradil added
padrões gradil added

--- a/pastores-pe/padrões-iurd.html
+++ b/pastores-pe/padrões-iurd.html
@@ -81,6 +81,9 @@
         <div class="col-xs-12">
                 <div class="text-center">
                     <div style="padding-bottom: 30px;">
+                        <button onclick="location.href='https://igrejauniversaldorei-my.sharepoint.com/:f:/g/personal/lfcaciano_universal_org/EqlbY4UeyERGv4taFSR3BS4BnjcdXMJI7mbCkwhuNVH8fg?e=dyC3oJ'" type="button" class="btn btn-outline-light" style="width: 80%; padding-top:10px; padding-bottom:10px; font-weight: 600;">Gradil e Portões</button>
+                    </div>
+                    <div style="padding-bottom: 30px;">
                         <button onclick="location.href='https://igrejauniversaldorei-my.sharepoint.com/:b:/g/personal/lfcaciano_universal_org/Ec-Y3uGDhLNAolCYN6j4zJ4Blp2z7y7hO_YVIk-FNpp__Q?e=4hfUN7'" type="button" class="btn btn-outline-light" style="width: 80%; padding-top:10px; padding-bottom:10px; font-weight: 600;">Película Jateada</button>
                     </div>
                     <div style="padding-bottom: 30px;">
