--- a/pastores-pe/contatos-empresas-hidraulica.html
+++ b/pastores-pe/contatos-empresas-hidraulica.html
@@ -48,6 +48,9 @@
                             <button onclick="location.href='tel:+558737622648'" type="button" class="btn btn-outline-light" style="width: 80%; padding-top:10px; padding-bottom:10px; font-weight: 600;">Técnica Tubos (Caruaru)</button>
                         </div>
                         <div style="padding-bottom: 30px;">
+                            <button onclick="location.href='https://wa.me/5581988534280?text=Olá,%20gostaria%20de%20um%20orçamento!'" type="button" class="btn btn-outline-light" style="width: 80%; padding-top:10px; padding-bottom:10px; font-weight: 600;">Flávio Luiz</button>
+                        </div>
+                        <div style="padding-bottom: 30px;">
                             <button onclick="location.href='https://wa.me/5581986343916?text=Olá,%20gostaria%20de%20um%20orçamento!'" type="button" class="btn btn-outline-light" style="width: 80%; padding-top:10px; padding-bottom:10px; font-weight: 600;">Odilon das Bombas</button>
                         </div>
 
