--- a/pastores-pe/contatos-empresas-pintura.html
+++ b/pastores-pe/contatos-empresas-pintura.html
@@ -33,9 +33,6 @@
             <div class="col-xs-12">
                     <div class="text-center">
                         <div style="padding-bottom: 30px;">
-                            <button onclick="location.href='https://wa.me/558189324325?text=Olá,%20gostaria%20de%20um%20orçamento!'" type="button" class="btn btn-outline-light" style="width: 80%; padding-top:10px; padding-bottom:10px; font-weight: 600;">JAS Construtora</button>
-                        </div>
-                        <div style="padding-bottom: 30px;">
                             <button onclick="location.href='https://wa.me/558199423738?text=Olá,%20gostaria%20de%20um%20orçamento!'" type="button" class="btn btn-outline-light" style="width: 80%; padding-top:10px; padding-bottom:10px; font-weight: 600;">AH Serviços</button>
                         </div>
                         <div style="padding-bottom: 30px;">
@@ -43,6 +40,12 @@
                         </div>
                         <div style="padding-bottom: 30px;">
                             <button onclick="location.href='https://wa.me/5581992012106?text=Olá,%20gostaria%20de%20um%20orçamento!'" type="button" class="btn btn-outline-light" style="width: 80%; padding-top:10px; padding-bottom:10px; font-weight: 600;">BCN Engenharia</button>
+                        </div>
+                        <div style="padding-bottom: 30px;">
+                            <button onclick="location.href='https://wa.me/558189324325?text=Olá,%20gostaria%20de%20um%20orçamento!'" type="button" class="btn btn-outline-light" style="width: 80%; padding-top:10px; padding-bottom:10px; font-weight: 600;">JAS Construtora</button>
+                        </div>
+                        <div style="padding-bottom: 30px;">
+                            <button onclick="location.href='https://wa.me/5581998419801?text=Olá,%20gostaria%20de%20um%20orçamento!'" type="button" class="btn btn-outline-light" style="width: 80%; padding-top:10px; padding-bottom:10px; font-weight: 600;">Rogério Pintor</button>
                         </div>
                         <div style="padding-bottom: 30px;">
                             <button onclick="location.href='https://wa.me/558183078893?text=Olá,%20gostaria%20de%20um%20orçamento!'" type="button" class="btn btn-outline-light" style="width: 80%; padding-top:10px; padding-bottom:10px; font-weight: 600;">Vanderlei Pintura</button>
@@ -58,6 +61,9 @@
                         </div>
                         <div style="padding-bottom: 30px;">
                             <button onclick="location.href='https://wa.me/558796063228?text=Olá,%20gostaria%20de%20um%20orçamento!'" type="button" class="btn btn-outline-light" style="width: 80%; padding-top:10px; padding-bottom:10px; font-weight: 600;">HD Pintura (Serra Talhada)</button>
+                        </div>
+                        <div style="padding-bottom: 30px;">
+                            <button onclick="location.href='https://wa.me/5581988534280?text=Olá,%20gostaria%20de%20um%20orçamento!'" type="button" class="btn btn-outline-light" style="width: 80%; padding-top:10px; padding-bottom:10px; font-weight: 600;">Flávio Luiz</button>
                         </div>
                         <div style="padding-bottom: 30px;">
                             <button onclick="location.href='tel:+558132234811'" type="button" class="btn btn-outline-light" style="width: 80%; padding-top:10px; padding-bottom:10px; font-weight: 600;">Matos Oliveira Engenharia</button>
