servicos-autorizados update
novo manual serviços autorizados adicionado

--- a/pastores-pe/contatos-empresas-serralheria.html
+++ b/pastores-pe/contatos-empresas-serralheria.html
@@ -36,6 +36,9 @@
                             <button onclick="location.href='https://wa.me/558186922455?text=Olá,%20gostaria%20de%20um%20orçamento!'" type="button" class="btn btn-outline-light" style="width: 80%; padding-top:10px; padding-bottom:10px; font-weight: 600;">JK Caldeiraria</button>
                         </div>                        
                         <div style="padding-bottom: 30px;">
+                            <button onclick="location.href='https://wa.me/5581986592589?text=Olá,%20gostaria%20de%20um%20orçamento!'" type="button" class="btn btn-outline-light" style="width: 80%; padding-top:10px; padding-bottom:10px; font-weight: 600;">Robson Serralheria</button>
+                        </div>
+                        <div style="padding-bottom: 30px;">
                             <button onclick="location.href='https://wa.me/5587999004385?text=Olá,%20gostaria%20de%20um%20orçamento!'" type="button" class="btn btn-outline-light" style="width: 80%; padding-top:10px; padding-bottom:10px; font-weight: 600;">Mr. Metal (Serra Talhada)</button>
                         </div>
                         <div style="padding-bottom: 30px;">
