--- a/pr-pe-2.html
+++ b/pr-pe-2.html
@@ -26,7 +26,7 @@
     <div class="col-xs-12">
             <div class="text-center">
                 <div style="padding-bottom: 30px;">
-                    <button onclick="location.href='pastores-pe/Manual-Básico-de-Operação-SAC-TUTORIAL-AOS-PASTORES.html'" type="button" class="btn btn-outline-light shake" style="width: 80%; padding-top:10px; padding-bottom:10px; font-weight: 800;">Manual Básico de Operação</button>
+                    <button onclick="location.href='https://igrejauniversaldorei-my.sharepoint.com/:b:/g/personal/lfcaciano_universal_org/EQ_ktrjZ3SxGhAZvFBF0bB0BSCZcCXsHfZgiY6mxl9AwWg?e=zSc6pd'" type="button" class="btn btn-outline-light shake" style="width: 80%; padding-top:10px; padding-bottom:10px; font-weight: 800;">Manual Básico de Operação</button>
                 </div>
                 <div style="padding-bottom: 30px;">
                     <button onclick="location.href='https://web.microsoftstream.com/video/e928dd9a-6c08-4ecd-b93b-ecc7e6e17711?referrer=https:%2F%2Fatendimentouniversal.custhelp.com%2F'" type="button" class="btn btn-outline-light" style="width: 80%; padding-top:10px; padding-bottom:10px; font-weight: 600;">Vídeoaula Tutorial</button>
@@ -42,7 +42,7 @@
         <div class="container">
             <div class="col-xs-12">
                     <div class="text-center" style="padding-top: 30px; padding-bottom: 30px;">
-                        <h2 style="color: #ffffff; padding-top: 20px;">Instruções Iniciais</h2>
+                        <h2 style="color: #ffffff; padding-top: 20px;">Serviços & Padrões</h2>
                     </div>
             </div>
             </div>
@@ -54,7 +54,7 @@
                             <button onclick="location.href='pastores-pe/orientacoes-gerais.html'" type="button" class="btn btn-outline-light shake" style="width: 80%; padding-top:10px; padding-bottom:10px; font-weight: 800;">Orientações Gerais - Processo BB</button>
                         </div>
                         <div style="padding-bottom: 30px;">
-                            <button onclick="location.href='pastores-pe/servicos-autorizados.html'" type="button" class="btn btn-outline-light shake" style="width: 80%; padding-top:10px; padding-bottom:10px; font-weight: 800;">Serviços Autorizados</button>
+                            <button onclick="location.href='https://igrejauniversaldorei-my.sharepoint.com/:b:/g/personal/lfcaciano_universal_org/ESDV8DCheG9HkIQmmH8Dc2oBRWVG7U6BakBuPjBscvHYAQ?e=cEiyt2'" type="button" class="btn btn-outline-light shake" style="width: 80%; padding-top:10px; padding-bottom:10px; font-weight: 800;">Serviços Autorizados</button>
                         </div>
                         <div style="padding-bottom: 30px;">
                             <button onclick="location.href='pastores-pe/padrões-iurd.html'" type="button" class="btn btn-outline-light" style="width: 80%; padding-top:10px; padding-bottom:10px; font-weight: 600;">Modelos Padrões - IURD</button>
