--- a/pr-pe-2.html
+++ b/pr-pe-2.html
@@ -75,7 +75,7 @@
         <div class="col-xs-12">
                 <div class="text-center">
                     <div style="padding-bottom: 30px;">
-                        <button onclick="location.href='pastores-pe/contatos-empresas.html'" type="button" class="btn btn-outline-light shake" style="width: 80%; padding-top:10px; padding-bottom:10px; font-weight: 800;">Contatos - Empresas</button>
+                        <button onclick="location.href='https://casadosdados.com.br/solucao/cnpj/pesquisa-avancada'" type="button" class="btn btn-outline-light shake" style="width: 80%; padding-top:10px; padding-bottom:10px; font-weight: 800;">Contatos - Empresas</button>
                     </div>
                     <div style="padding-bottom: 30px;">
                         <button onclick="location.href='pastores-pe/orcamento-deve-conter.html'" type="button" class="btn btn-outline-light" style="width: 80%; padding-top:10px; padding-bottom:10px; font-weight: 600;">O que um Orçamento deve Conter?</button>
